Readme and roles
Added more text in the readme and changed some stuff in roles.

--- a/jarv/templates/roles.html
+++ b/jarv/templates/roles.html
@@ -15,7 +15,7 @@
     {% for role in roles %}
     <tr>
       <th scope="row">{{ role.id }}</th>
-      <td><a href="{{ url_for('show_role', role_id=role.id) }}">{{ mission.role }}</a></td>
+      <td>{{ role.name }}</td>
     </tr>
     {% endfor %}
   </tbody>
